--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
     "@supabase/supabase-js": "^1.35.6",
+    "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "pinia": "^2.0.22",
     "pinia-plugin-persist": "^1.0.0",
-    "vue": "^3.2.13",
+    "vue": "^3.2.39",
     "vue-router": "^4.0.3"
   },
   "devDependencies": {
