--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@supabase/supabase-js": "^1.35.6",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.1",
     "core-js": "^3.8.3",
     "pinia": "^2.0.22",
